--- a/CrudApp/Views/Shared/_StormLayout1.cshtml
+++ b/CrudApp/Views/Shared/_StormLayout1.cshtml
@@ -47,7 +47,7 @@
 
                 </button>
 
-                <a class="navbar-brand" href="~/Home/Index">G.A</a>
+                <a class="navbar-brand" href="~/Home/Index"><span class="fa fa-globe"></span> G.A</a>
 
             </div>
 
