--- a/CrudApp/Views/Home/Index.cshtml
+++ b/CrudApp/Views/Home/Index.cshtml
@@ -41,20 +41,26 @@
 
 
 
-    <section id="portfolio" class="section-portfolio">
+    <section id="3portfolio" class="featured-map-section">
 
         <div class="container">
 
-            <div class="row">
+            <div class="row" ng-cloak>
 
-                <div class="col-md-1 col-sm-1">
+                <div class="col-md-11 col-sm-11 col-md-offset-1 col-sm-offset-1">
+                    <div class="section-title">
+                        <h2><span>{{HmC.location.city}} Area</span></h2>
+                    </div>
                 </div>
-                <div class="col-md-6 col-sm-10">
-                    <h2>{{HmC.location.city}} Area</h2>
+                <div class="col-md-6 col-sm-10 col-md-offset-1 col-sm-offset-1">
                     <div id="map" class="map-display"></div>
                 </div>
                 <div class="col-md-5 col-sm-10">
-                    <h1>This will be information on displayed object</h1>
+                    <h3><strong>{{HmC.featuredMap.Title | uppercase}}</strong></h3>
+                    <h4 id="year">{{HmC.featuredMap.Year}}</h4>
+                    <p id="credit"><em>{{HmC.featuredMap.Contributor}}</em> | Coutresy of <strong><a ng-href="{{HmC.featuredMap.InstitutionUrl}}" target="_blank">{{HmC.featuredMap.SourceInstitution}}</a></strong></p>
+                    <p id="description">{{HmC.featuredMap.Description}}</p>
+                    <a href="~/Home/GoLocal" class="btn btn-border-theme-dark">Find More Like This</a>
                 </div>
             </div>
         </div>
@@ -144,7 +150,7 @@
                             <h1>Latest Additions</h1>
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-6">
-                            <a href="portfolio.html" class="btn btn-border-theme pull-right">Search Archive</a>
+                            <a href="portfolio.html" class="btn btn-border-theme-dark pull-right">Search Archive</a>
                         </div>
 
 
@@ -230,125 +236,11 @@
 
     <script src="~/Scripts/leaflet/mapEditTools.js"></script>
 
-    @*<script src="~/Scripts/services/project.services.Leaflet.js"></script>*@
 
     <script src="~/Scripts/App/LeafletJS/Services/LeafletMapService.js"></script>
 
     <!-- Home Controller-->
     <script src="~/Scripts/App/Pages/Controllers/HomeController.js"></script>
 
-    @*<script>
-        project.page.startUp = function () {
-
-            // Get User's location
-            project.services.IP.getLocation(project.page.onGetLocationSuccess, project.page.onAjaxError);
-
-            $("body").find(".leaflet-image-layer").fadeOut();
-        };
-
-        // .....................................................................................
-        // If user location retrieved successfully
-        project.page.onGetLocationSuccess = function (locationObject) {
-            // Centers display map on recieved latLng coordinates
-            var latLng = {
-                lat: locationObject.lat,
-                lng: locationObject.lon
-            };
-
-            project.services.Leaflet.editMap(latLng);
-        }
-
-        // .....................................................................................
-
-        project.page.onAjaxError = function (data) {
-            console.log("An error occured: ", data);
-        }
-
-    </script>*@
-
-    <!-- $documentHttpService -->
-    @*<script src="~/Scripts/App/Archive/Services/documentHttpService.js"></script>*@
-    @*<script>
-            (function () {
-                "use strict"
-                angular.module(project.APPNAME)
-                .controller("homecontroller", HomeController);
-
-                HomeController.$inject = ['$documentHttpService', '$ipLocationService'];
-
-                function HomeController($documentHttpService, $ipLocationService) {
-
-                    // Injection
-                    var vm = this;
-                    vm.$documentHttp = $documentHttpService;
-                    vm.$ipLocationService = $ipLocationService;
-
-                    // Methods
-                    vm.getLatestDocuments = _getLatestDocuments;
-                    vm.getLocation = _getLocation;
-
-                    // Properties
-                    vm.message = "hello world!";
-                    vm.latest = null;
-                    vm.location = null;
-
-                    vm.tabs = [
-                        { link: "#/", title: "Primary", "class": "active" },
-                        { link: "#/office", title: "Office", "class": "" },
-                        { link: "#/warehouse", title: "Warehouse", "class": "" },
-                        { link: "#/projectSite", title: "Project Site", "class": "" }
-                    ];
-
-                    // Stat-up functions
-                    vm.getLatestDocuments();
-                    vm.getLocation();
-
-
-                    // /////////////////////////////////////////////////////////////////////////////////
-
-                    function _getLatestDocuments() {
-                        return $documentHttpService.getLatest()
-                            .then(function populateVmLatest(latest) {
-
-                                // Add delay value for css animation
-                                if (latest.data.Items.length > 0) {
-                                    var items = latest.data.Items;
-                                    var delay = 0.2;
-                                    for (var i = 0; i < items.length; i++) {
-                                        items[i].delay = delay;
-                                        delay += 0.2;
-                                    }
-                                    vm.latest = items;
-                                }
-                                console.log("test: ", vm.latest); // TODO FIXME DELETE
-                            })
-                            .catch(showError);
-                    }
-
-
-                    // .................................................................................
-
-                    function _getLocation() {
-                        vm.$ipLocationService.getLocation()
-                        .then(function (location) {
-                            console.log("location: ", location);
-                            vm.location = location.data;
-                        })
-                        .catch(showError);
-                    }
-
-
-                    // .................................................................................
-
-                    function showError(error) {
-                        console.log("An http error occured! ", error);
-                    };
-
-                }
-
-            })();
-
-
-        </script>*@
 
 }
