--- a/CrudApp/Views/Home/Contribute.cshtml
+++ b/CrudApp/Views/Home/Contribute.cshtml
@@ -40,9 +40,9 @@
                         <label for="doctype-picture" class="cursor-pointer">
                             <input type="radio" id="doctype-picture" name="doctype" class="form-control-inline" ng-model="CrbC.documentType" ng-change="CrbC.resetResource()" value="picture" />Picture
                         </label>
-                        <label for="doctype-video" class="cursor-pointer">
+                        @*<label for="doctype-video" class="cursor-pointer">
                             <input type="radio" id="doctype-video" name="doctype" class="form-control-inline" ng-model="CrbC.documentType" ng-change="CrbC.resetResource()" value="video" disabled />Video
-                        </label>
+                        </label>*@
 
                         <!-- Resource URL -->
                         <input class="form-control form-control-lg" ng-Change="CrbC.displayResource()" ng-model="CrbC.resourceUrl" type="text" height="5" placeholder="Paste Image Url" />
