improved map dispplay functionality and map services

--- a/CrudApp/Content/CSS/SASS/custom.scss
+++ b/CrudApp/Content/CSS/SASS/custom.scss
@@ -293,6 +293,10 @@ figure:hover figcaption h2 {
     height: 100%;
 }
 
+#doc-title{
+   margin: 0.5em 0;
+}
+
 .map-display {
     display: block;
     height: 45em;
