--- a/CrudApp/Content/CSS/custom.css
+++ b/CrudApp/Content/CSS/custom.css
@@ -228,6 +228,9 @@ figure:hover figcaption h2 {
   width: 100%;
   height: 100%; }
 
+#doc-title {
+  margin: 0.5em 0; }
+
 .map-display, .map-display-modal {
   display: block;
   height: 45em;
